// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticator renders confirmResetPassword subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
        data-amplify-router-content=""
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        
        <div>
          
          
          <form
            data-amplify-authenticator-confirmresetpassword=""
            data-amplify-form=""
          >
            
            
            <fieldset
              class="amplify-flex amplify-authenticator__column"
              data-amplify-fieldset=""
            >
              
              
              <h3
                class="amplify-heading amplify-heading--3"
                data-amplify-heading=""
              >
                Reset Password
              </h3>
              
              <div
                class="amplify-flex amplify-authenticator__column"
              >
                
                
                
                
              </div>
              
              <footer
                class="amplify-flex amplify-authenticator__column"
              >
                
                <!--v-if-->
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="primary"
                  fullwidth="false"
                  type="submit"
                >
                  
                  Submit
                  
                </button>
                
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-size="small"
                  data-variation="link"
                  fullwidth="false"
                  type="button"
                >
                  
                  Resend Code
                  
                </button>
                
                
                
                
              </footer>
              
              
            </fieldset>
            
            
          </form>
          
          
        </div>
        
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders confirmSignIn subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
        data-amplify-router-content=""
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        
        <div>
          
          
          <form
            data-amplify-authenticator-confirmsignin=""
            data-amplify-form=""
          >
            
            
            <fieldset
              class="amplify-flex amplify-authenticator__column"
              data-amplify-fieldset=""
            >
              
              
              <h3
                class="amplify-heading amplify-heading--3"
                data-amplify-heading=""
              >
                Confirm TOTP Code
              </h3>
              
              <div
                class="amplify-flex amplify-authenticator__column"
              >
                
                
                
                
              </div>
              
              <footer
                class="amplify-flex amplify-authenticator__column"
              >
                
                <!--v-if-->
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="primary"
                  fullwidth="false"
                  style="font-weight: normal;"
                >
                  
                  Confirm
                  
                </button>
                
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-size="small"
                  data-variation="link"
                  fullwidth="false"
                  style="font-weight: normal;"
                  type="button"
                >
                  
                  Back to Sign In
                  
                </button>
                
                
                
                
              </footer>
              
              
            </fieldset>
            
            
          </form>
          
          
        </div>
        
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders confirmSignUp subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
        data-amplify-router-content=""
      >
        <!--v-if-->
        <!--v-if-->
        
        <div>
          
          
          <form
            data-amplify-form=""
          >
            
            <div
              class="amplify-flex amplify-authenticator__column"
            >
              
              
              <h3
                class="amplify-heading amplify-authenticator__heading amplify-heading--3"
                data-amplify-heading=""
              >
                We Texted You
              </h3>
              
              
              <span
                class="amplify-authenticator__subtitle"
                data-amplify-text=""
              >
                
                Your code is on the way. To log in, enter the code we sent you. It may take a minute to arrive.
                
              </span>
              
              
              <fieldset
                class="amplify-flex amplify-authenticator__column"
                data-amplify-fieldset=""
              >
                
                
                
                
              </fieldset>
              
              
              <footer
                class="amplify-flex amplify-authenticator__column"
              >
                
                <!--v-if-->
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="primary"
                  fullwidth="false"
                  type="submit"
                >
                  
                  Confirm
                  
                </button>
                
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--default amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="default"
                  fullwidth="false"
                  style="font-weight: normal;"
                  type="button"
                >
                  
                  Resend Code
                  
                </button>
                
                
                
                
              </footer>
              
              
            </div>
            
          </form>
          
          
        </div>
        
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders confirmVerifyUser subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
        data-amplify-router-content=""
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        
        <div>
          
          
          <form
            data-amplify-form=""
          >
            
            
            <fieldset
              class="amplify-flex amplify-authenticator__column"
              data-amplify-fieldset=""
            >
              
              
              <h3
                class="amplify-heading amplify-heading--3"
                data-amplify-heading=""
              >
                Account recovery requires verified contact information
              </h3>
              
              <div
                class="amplify-flex amplify-authenticator__column"
              >
                
                
                
                
              </div>
              
              <footer
                class="amplify-flex amplify-authenticator__column"
              >
                
                <!--v-if-->
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="primary"
                  fullwidth="false"
                  type="submit"
                >
                  
                  Submit
                  
                </button>
                
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-size="small"
                  data-variation="link"
                  fullwidth="false"
                  style="font-weight: normal;"
                  type="button"
                >
                  
                  Skip
                  
                </button>
                
                
                
                
              </footer>
              
              
            </fieldset>
            
            
          </form>
          
          
        </div>
        
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders forceNewPassword subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
        data-amplify-router-content=""
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        
        <div>
          
          
          <form
            data-amplify-authenticator-forcenewpassword=""
            data-amplify-form=""
          >
            
            
            <fieldset
              class="amplify-flex amplify-authenticator__column"
              data-amplify-fieldset=""
            >
              
              
              <h3
                class="amplify-heading amplify-heading--3"
                data-amplify-heading=""
              >
                Change Password
              </h3>
              
              <div
                class="amplify-flex amplify-authenticator__column"
              >
                
                
                
                
                
                
              </div>
              
              <footer
                class="amplify-flex amplify-authenticator__column"
              >
                
                <!--v-if-->
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="primary"
                  fullwidth="false"
                  style="font-weight: normal;"
                >
                  
                  Change Password
                  
                </button>
                
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-size="small"
                  data-variation="link"
                  fullwidth="false"
                  style="font-weight: normal;"
                  type="button"
                >
                  
                  Back to Sign In
                  
                </button>
                
                
                
                
              </footer>
              
              
            </fieldset>
            
            
          </form>
          
          
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders forgotPassword subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
        data-amplify-router-content=""
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        
        
        <form
          data-amplify-authenticator-forgotpassword=""
          data-amplify-form=""
        >
          
          <div
            class="amplify-flex amplify-authenticator__column"
          >
            
            
            <h3
              class="amplify-heading amplify-heading--3"
              data-amplify-heading=""
            >
              Reset Password
            </h3>
            
            
            <fieldset
              class="amplify-flex amplify-authenticator__column"
              data-amplify-fieldset=""
            >
              
              
              
              
            </fieldset>
            
            
            <footer
              class="amplify-flex amplify-authenticator__column"
            >
              
              <!--v-if-->
              
              <button
                class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                data-amplify-button=""
                data-disabled="false"
                data-fullwidth="false"
                data-loading="false"
                data-variation="primary"
                fullwidth="false"
                type="submit"
              >
                
                Send code
                
              </button>
              
              
              <button
                class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
                data-amplify-button=""
                data-disabled="false"
                data-fullwidth="false"
                data-loading="false"
                data-size="small"
                data-variation="link"
                fullwidth="false"
                style="font-weight: normal;"
                type="button"
              >
                
                Back to Sign In
                
              </button>
              
              
              
              
            </footer>
            
            
          </div>
          
        </form>
        
        
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders setupTotp subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
        data-amplify-router-content=""
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        
        <div>
          
          
          <form
            data-amplify-authenticator-setup-totp=""
            data-amplify-form=""
          >
            
            
            <fieldset
              class="amplify-flex amplify-authenticator__column"
              data-amplify-fieldset=""
            >
              
              <div
                class="amplify-flex amplify-authenticator__column"
              >
                
                
                <h3
                  class="amplify-heading amplify-heading--3"
                  data-amplify-heading=""
                >
                   Setup TOTP 
                </h3>
                
                <div
                  class="amplify-flex amplify-authenticator__column"
                >
                  
                  <p>
                    Loading...
                  </p>
                  <div
                    class="amplify-flex"
                    data-amplify-copy=""
                  >
                    
                    <div>
                      totp-mock-secret-code
                    </div>
                    <div
                      data-amplify-copy-svg=""
                    >
                      
                      <div
                        data-amplify-copy-tooltip=""
                      >
                        COPY
                      </div>
                      <svg
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 1H4C2.9 1 2 1.9 2 3V17H4V3H16V1ZM15 5H8C6.9 5 6.01 5.9 6.01 7L6 21C6 22.1 6.89 23 7.99 23H19C20.1 23 21 22.1 21 21V11L15 5ZM8 21V7H14V12H19V21H8Z"
                        />
                      </svg>
                      
                    </div>
                    
                  </div>
                  
                  
                  
                </div>
                
                <footer
                  class="amplify-flex amplify-authenticator__column"
                >
                  
                  <!--v-if-->
                  
                  <button
                    class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                    data-amplify-button=""
                    data-disabled="false"
                    data-fullwidth="false"
                    data-loading="false"
                    data-variation="primary"
                    fullwidth="false"
                    type="submit"
                  >
                    
                    Confirm
                    
                  </button>
                  
                  
                  <button
                    class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
                    data-amplify-button=""
                    data-disabled="false"
                    data-fullwidth="false"
                    data-loading="false"
                    data-size="small"
                    data-variation="link"
                    fullwidth="false"
                    style="font-weight: normal;"
                    type="button"
                  >
                    
                    Back to Sign In
                    
                  </button>
                  
                  
                  
                  
                </footer>
                
                
              </div>
              
            </fieldset>
            
            
          </form>
          
          
        </div>
        
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders signIn subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
      >
        <div
          aria-orientation="horizontal"
          class="amplify-authenticator__tabs amplify-tabs"
          data-orientation="horizontal"
          tabindex="0"
        >
          
          <div
            class="amplify-tabs__list amplify-tabs__list--top amplify-tabs__list--equal amplify-authenticator__tabs-wrapper"
            role="tablist"
          >
            
            
            <button
              aria-controls="signIn-panel"
              aria-selected="true"
              class="amplify-tabs__item--active amplify-tabs__item"
              id="signIn-tab"
              role="tab"
              tabindex="0"
            >
              Sign In
            </button>
            <button
              aria-controls="signUp-panel"
              aria-selected="false"
              class="amplify-tabs__item"
              id="signUp-tab"
              role="tab"
              tabindex="-1"
            >
              Create Account
            </button>
            
            
          </div>
          
        </div>
        <div
          data-amplify-router-content=""
        >
          
          
          
          <div
            aria-labelledby="signIn-tab"
            class="amplify-tabs__panel amplify-tabs__panel--active"
            id="signIn-panel"
            role="tabpanel"
          >
            
            
            <form
              data-amplify-authenticator-signin=""
              data-amplify-form=""
              method="post"
            >
              
              <!--v-if-->
              <div
                class="amplify-flex amplify-authenticator__column"
              >
                
                
                <fieldset
                  class="amplify-flex amplify-authenticator__column"
                  data-amplify-fieldset=""
                >
                  
                  <legend
                    class="amplify-visually-hidden"
                  >
                    Sign in
                  </legend>
                  
                  
                  
                </fieldset>
                
                <!--v-if-->
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="primary"
                  fullwidth="true"
                >
                  
                  Sign in
                  
                </button>
                
                
              </div>
              
            </form>
            
            
          </div>
          
          <footer>
            
            
            <div
              data-amplify-footer=""
            >
              
              <button
                class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
                data-amplify-button=""
                data-disabled="false"
                data-fullwidth="false"
                data-loading="false"
                data-size="small"
                data-variation="link"
                fullwidth="true"
                style="font-weight: normal;"
                type="button"
              >
                
                Forgot your password?
                
              </button>
              
            </div>
            
            
          </footer>
          
          
          <!--v-if-->
        </div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders signUp subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
      >
        <div
          aria-orientation="horizontal"
          class="amplify-authenticator__tabs amplify-tabs"
          data-orientation="horizontal"
          tabindex="0"
        >
          
          <div
            class="amplify-tabs__list amplify-tabs__list--top amplify-tabs__list--equal amplify-authenticator__tabs-wrapper"
            role="tablist"
          >
            
            
            <button
              aria-controls="signIn-panel"
              aria-selected="false"
              class="amplify-tabs__item"
              id="signIn-tab"
              role="tab"
              tabindex="-1"
            >
              Sign In
            </button>
            <button
              aria-controls="signUp-panel"
              aria-selected="true"
              class="amplify-tabs__item--active amplify-tabs__item"
              id="signUp-tab"
              role="tab"
              tabindex="0"
            >
              Create Account
            </button>
            
            
          </div>
          
        </div>
        <div
          data-amplify-router-content=""
        >
          <!--v-if-->
          
          
          
          <div
            aria-labelledby="signUp-tab"
            class="amplify-tabs__panel amplify-tabs__panel--active"
            id="signUp-panel"
            role="tabpanel"
          >
            
            
            <form
              data-amplify-form=""
            >
              
              <!--v-if-->
              <div
                class="amplify-flex amplify-authenticator__column"
              >
                
                
                <fieldset
                  class="amplify-flex amplify-authenticator__column"
                  data-amplify-fieldset=""
                >
                  
                  
                  
                  
                </fieldset>
                
                <!--v-if-->
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="primary"
                  fullwidth="true"
                  style="border-radius: 0px; font-weight: normal;"
                >
                  
                  Create Account
                  
                </button>
                
                
              </div>
              
            </form>
            
            
          </div>
          
          <footer>
            
            
          </footer>
          
          
        </div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;

exports[`authenticator renders verifyUser subcomponent 1`] = `
<div>
  
  <div
    data-amplify-authenticator=""
    data-variation="default"
  >
    <div
      data-amplify-container=""
    >
      
      
      <div
        data-amplify-router=""
        data-amplify-router-content=""
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        
        <div>
          
          
          <form
            data-amplify-form=""
          >
            
            
            <fieldset
              class="amplify-flex amplify-authenticator__column"
              data-amplify-fieldset=""
            >
              
              
              <h3
                class="amplify-heading amplify-heading--3"
                data-amplify-heading=""
              >
                Account recovery requires verified contact information
              </h3>
              
              <div
                class="amplify-flex amplify-field amplify-radiogroupfield amplify-authenticator__column"
              >
                
                <!-- TODO(BREAKING): remove hard coded string 493c -->
                <label
                  class="amplify-visually-hidden amplify-label"
                  data-amplify-label=""
                  id="amplify-field-493c"
                >
                  
                  Verify Contact
                  
                </label>
                <div
                  aria-labelledby="amplify-field-493c"
                  class="amplify-flex amplify-field amplify-radiogroupfield amplify-authenticator__column"
                >
                  
                  
                  
                  <label
                    class="amplify-flex amplify-radio"
                    data-amplify-label=""
                    data-amplify-verify-label=""
                  >
                    
                    
                    <span
                      class="amplify-text amplify-radio__label"
                      data-amplify-text=""
                    >
                      
                      Email: t**t@example.com
                      
                    </span>
                    
                    <input
                      aria-invalid="false"
                      class="amplify-input amplify-field-group__control amplify-visually-hidden amplify-radio__input"
                      data-amplify-input=""
                      data-amplify-verify-input=""
                      name="unverifiedAttr"
                      type="radio"
                      value="email"
                    />
                    
                    <span
                      aria-hidden="true"
                      class="amplify-flex amplify-radio__button"
                      data-amplify-text=""
                    >
                      
                      
                    </span>
                    
                    
                  </label>
                  
                  
                  
                </div>
                
              </div>
              
              <footer
                class="amplify-flex amplify-authenticator__column"
              >
                
                <!--v-if-->
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-variation="primary"
                  fullwidth="false"
                  type="submit"
                >
                  
                  Verify
                  
                </button>
                
                
                <button
                  class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
                  data-amplify-button=""
                  data-disabled="false"
                  data-fullwidth="false"
                  data-loading="false"
                  data-size="small"
                  data-variation="link"
                  fullwidth="false"
                  style="font-weight: normal;"
                  type="button"
                >
                  
                  Skip
                  
                </button>
                
                
                
                
              </footer>
              
              
            </fieldset>
            
            
          </form>
          
          
        </div>
        
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <!-- cast slot props back to any for backwards compatibility -->
  <!--v-if-->
  
</div>
`;
